# UniBox

./: .gitmodules  CMakeLists.txt  README.md
include/cl-engine/: engine.hpp
include/compute/: meshgen.hpp  simulator.hpp
include/gui-engine/: button.hpp  engine.hpp  image.hpp  object.hpp  types.hpp
include/guis/: element_bar.hpp  tooltip.hpp
include/renderer/: buffer_renderer.hpp  camera.hpp  gui_renderer.hpp  renderer.hpp
include/simulator/: editor.hpp  particle.hpp  particle_grid.hpp  voxel.hpp
include/util/: base64.hpp  finalizer.hpp  font.hpp  format.hpp  global_resources.hpp  savefile.hpp  semaphore.h  shader_assembler.hpp  text.hpp  texture_atlas.hpp
include/vk-engine/: buffer.hpp  commandbuffer.hpp  commandpool.hpp  computepipeline.hpp  engine.hpp  gfxpipeline.hpp  image.hpp  shader.hpp  shader_assembler.hpp  vma.h  window.hpp
particles/: packs.conf
particles/unibox/: manifest.json
particles/unibox/copper/: properties.json  update.cl  update.glsl
particles/unibox/fiber/: draw.cl  draw.glsl  properties.json  update.cl  update.glsl
particles/unibox/fibre/: properties.json  update.glsl
particles/unibox/filter/: properties.json  update.cl
particles/unibox/gate/: draw.cl  properties.json  update.cl
particles/unibox/nsilicon/: properties.json
particles/unibox/photon/: draw.cl  properties.json  update.cl  update.glsl
particles/unibox/psilicon/: properties.json  update.cl
particles/unibox/sand/: properties.json  update.cl  update.glsl
particles/unibox/scripts/: light.cl  spark.cl
particles/unibox/spark/: properties.json  update.cl
shaders/: compile.sh
shaders/compute/: gridBuilder.comp  gridResetter.comp  meshGenerator.cl  meshGenerator.comp  resetter.comp  simulator.cl  simulator.comp
shaders/default/: default.vert
shaders/gui/atlas/: atlas.vert
shaders/gui/color/: color.frag  color.vert
shaders/gui/default/: default.frag  default.vert
shaders/gui/font/: font.frag  font.vert
shaders/gui/texture/: texture.frag  texture.vert
shaders/gui/tooltip/: tooltip.frag  tooltip.vert
src/: main.cpp  spirv_reflect.c
src/cl-engine/: engine.cpp
src/compute/: meshgen.cpp  simulator.cpp
src/gui-engine/: button.cpp  engine.cpp  image.cpp  object.cpp
src/guis/: element_bar.cpp  tooltip.cpp
src/renderer/: buffer_renderer.cpp  camera.cpp  gui_renderer.cpp  renderer.cpp
src/simulator/: particle.cpp  particle_grid.cpp
src/util/: base64.cpp  finalizer.cpp  font.cpp  format.cpp  global_resources.cpp  savefile.cpp  shader_assembler.cpp  text.cpp  texture_atlas.cpp
src/vk-engine/: buffer.cpp  commandbuffer.cpp  commandpool.cpp  computepipeline.cpp  engine.cpp  gfxpipeline.cpp  image.cpp  shader.cpp  shader_assembler.cpp  vma.cpp  window.cpp
